[package]
name = "orderly-allocator"
version = "0.2.2"
edition = "2021"
authors = ["ickk <crates@ickk.io>"]
description = "A super-simple fast soft-realtime allocator for managing an external pool of memory"
license = "MIT OR Apache-2.0 OR Zlib"
readme = "./README.md"
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "LICENSE-ZLIB"]
repository = "https://github.com/ickk/orderly-allocator/"
documentation = "https://docs.rs/orderly-allocator"
categories = ["memory-management", "no-std"]
keywords = ["allocator"]

[dependencies]

[lints]

[dev-dependencies]
offset-allocator = "0.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
range-alloc = "0.1.4"

[[bench]]
name = "noxim"
harness = false
